logout-greeter: Fallback to default lnf theme

If loading the file from the active lnf theme fails, also try
the fallback (default one).
BUG:474639
FIXED-IN:6.0